LPD-62456 Add tests for sorting